# karanga

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  package.json  pnpm-lock.yaml
app/: README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
app/src/: main.ts  styles.css  themes.ts  turndown-plugin-gfm.d.ts
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/src/: main.rs
crates/krg-cli/: Cargo.toml
crates/krg-cli/src/: main.rs
crates/krg-convert/: Cargo.toml
crates/krg-convert/src/: lib.rs
crates/krg-core/: Cargo.toml
crates/krg-core/src/: container.rs  document.rs  edit.rs  error.rs  hash.rs  id.rs  lib.rs  model.rs  query.rs  render.rs  schema.rs  scope.rs  search.rs  tree.rs  validate.rs  workspace.rs
crates/krg-core/tests/: discovery.rs  edit_ops.rs  editor_tree.rs  markdown.rs  read_path.rs  write_path.rs
crates/krg-mcp/: Cargo.toml
crates/krg-mcp/src/: main.rs
docs/: REQUIREMENTS.md  core-architecture-v0.1.md
spec/: format-v0.1.md  interface-v0.1.md
spec/examples/: README.md  build_fixture.py  retry-policy.expected.md  retry-policy.krg  retry-policy.outline.txt
spec/examples/retry-policy/: links.json  manifest.json  mimetype  spine.json
spec/examples/retry-policy/nodes/: c_ex.json  cl_warn.json  d_div.json  h_meth.json  h_over.json  h_res.json  l_bk.json  l_sub.json  li_1.json  li_2.json  li_2a.json  m_graph.json  p_intro.json  p_li1.json  p_li2.json  p_li2a.json  p_meth.json  p_note.json  p_warn.json  q_note.json  t_lat.json  tc_11.json  tc_12.json  tc_h1.json  tc_h2.json  tr_1.json  tr_h.json
spec/schemas/: links.schema.json  manifest.schema.json  node.schema.json  spine.schema.json  type-descriptor.schema.json
