[workspace]
resolver = "2"
members = [
    "crates/krg-core",
    "crates/krg-cli",
    "crates/krg-mcp",
    "crates/krg-convert",
]
# The Tauri desktop app is its own workspace (it pulls a large GUI dep tree and
# needs a built frontend), so it is excluded from the engine workspace.
exclude = ["app"]

[workspace.package]
version = "0.0.0"
edition = "2021"
license = "MIT"
authors = ["Cameron G. Gould <camggould@protonmail.com>"]
repository = "https://github.com/Karanga-AI/karanga"
rust-version = "1.85"

[workspace.dependencies]
krg-core = { path = "crates/krg-core" }
# Planned external dependencies (wired in during implementation;
# see docs/core-architecture-v0.1.md §9):
#   serde, serde_json, zip, sha2, uuid, ulid, pulldown-cmark, tantivy (feature "search")
