[package]
name = "krg-core"
description = "Karanga document engine: the .krg format and operation interface."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[features]
default = ["search"]
# `search` gates the optional Tantivy full-text index (core-architecture §7).
search = ["dep:tantivy"]

[dependencies]
pulldown-cmark = { version = "0.13.4", default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11.0"
tantivy = { version = "0.26.1", optional = true }
ulid = "1.2.1"
uuid = { version = "1.23.2", features = ["v4"] }
zip = { version = "8.6.0", default-features = false, features = ["deflate"] }
